--- a/CSS/style.css
+++ b/CSS/style.css
@@ -24,3 +24,8 @@ h2 {
     margin-top: 2px;
     margin-bottom: 2px;
 }
+.About {
+    color: white;
+    text-align: center;
+    margin-top: 30px;
+}
