--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,8 +4,38 @@ body {
 header {
     border-color: teal;
     border-width: thick;
-    border-style: double;
+    border-style: solid ridge solid;
     text-align: center;
+}
+div {
+    float: left;
+}
+button {
+    float: left;
+    margin-top: 10px;
+    margin-left: 3px;
+    margin-right: 5px;
+    margin-bottom: 8px;
+    background-color: black;
+    color: white;
+    font-size: 30px;
+    border-color: gold;
+    width: 150px;
+    height: 50px;
+    
+}
+button:hover {
+    background-color: white;
+    border-style: solid;
+    border-color: purple;
+    color:black;
+}
+figcaption {
+    color: white;
+    position: relative;
+    left: 850px;
+    bottom: 350px;
+    width: 100px;
 }
 
 h1 {
@@ -21,11 +51,160 @@ h1 {
 
 h2 {
     color: white;
-    margin-top: 2px;
-    margin-bottom: 2px;
+    text-align: center;
+    font-style: italic;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+h3 {
+    color:white;
+    float: left;
+    padding: 10 px 10 px 10 px 10 px;
+    margin: 10 px 10 px 10 px;
+}
+p {
+    color: white;
+}
+.Head {
+    position: relative;
+    right: 400px;
+    font-size: medium;
 }
 .About {
-    color: white;
+    color: gold;
     text-align: center;
-    margin-top: 30px;
+    font-size: 2em;
+    margin-top: 0px;
+    position: relative;
+    left: 0px;
+    top: 80px;
+    right: ;
+}
+* {box-sizing:border-box}
+
+p {
+    position: relative;
+    left:175px;
+    top:80px;
+    text-indent: 50px;
+    width: 610px;
+    line-height: 2;
+}
+.soundcloud {
+    position: relative;
+    width: 160px;
+    height: 50px;
+    right: px;
+    bottom: 25px;
+}
+.soundcloud:hover {
+    border-color: white;
+    border-style: double;
+}
+
+}
+.cbus {
+    position: relative;
+    bottom: 300px;
+    width: 150px;
+    border-style: solid;
+    border-color: teal;
+}
+.otterbein {
+    position: relative;
+    right: 155px;
+    width: 200px;
+}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: ;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+  border: white solid;
+  position: relative;
+  left: 150px;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: relative ;
+  top: 95%;
+  ;
+  width: fit-content;
+  margin-top: -22px;
+  padding: 16px;
+  color:;
+  font-weight: bold;
+  font-size: 40px;
+  transition: 0.6s ease;
+  border-radius: 0 10px 10px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.prev {
+position: relative;
+  right: 457px;
+  top: 200px;
+  border-radius: 3px 0 0 3px;
+  color: black;
+}
+.next {
+    position: relative;
+    left: 42px;
+    top:200px;
+    color: black;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: purple;
+  color: white;
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f200;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: black;
+  font-size: 12px;
+  padding: 15px 12px;
+  position: absolute;
+  top: 100;
+}
+
+
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
 }
