--- a/CSS/style.css
+++ b/CSS/style.css
@@ -24,6 +24,7 @@ button {
     width: 150px;
     height: 50px;
     
+    
 }
 button > img {
     position: relative;
@@ -80,18 +81,19 @@ p {
 }
 .About {
     color: gold;
+    flex-wrap: wrap;
     text-align: center;
     font-size: 2em;
     margin-top: 0px;
     position: relative;
-    left: 0px;
-    top: 50px;
+    left: -10px;
+    top: 15px;
     
 }
 * {box-sizing:border-box}
 
-p {
-    position: relative;
+.bio {
+    position: static;
     left:175px;
     top:80px;
     text-indent: 50px;
@@ -188,6 +190,14 @@ position: relative;
   text-align: center;
 }
 
+.contact {
+    color: white;
+}
+input {
+    width: 50%;
+    padding: 10px 10px 10px 10 px;
+    border: maroon solid;
+}
 /* Number text (1/3 etc) */
 .numbertext {
   color: black;
@@ -195,6 +205,9 @@ position: relative;
   padding: 15px 12px;
   position: absolute;
   top: 100;
+}
+.role {
+    color:  white;
 }
 
 
