--- a/CSS/style.css
+++ b/CSS/style.css
@@ -108,9 +108,12 @@ p {
 .pride {
     position: fixed;
     left: 960px;
-    bottom: 4px;
+    bottom: -4px;
     width: 50px;
     height: fit-content;
+}
+fieldset{
+    border: none;
 }
 
 /* Slideshow container */
@@ -179,10 +182,23 @@ position: relative;
 .contact {
     color: white;
 }
+.submit {
+    border: gold solid;
+    font-size: large;
+    background-color: black;
+    color: white;
+    width: 100px;
+}
+.submit:hover{
+    border: solid white;
+    background-color: teal;
+    color: white;
+}
 input {
     width: 50%;
     padding: 10px 10px 10px 10 px;
-    border: maroon solid;
+    border: teal solid;
+    f
 }
 /* Number text (1/3 etc) */
 .numbertext {
@@ -227,11 +243,19 @@ article {
 h4 {
     font-size: x-large;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding: 2px 2px 2px 2px;
+    border-color: teal;
+    border-width: 5px;
+    border-style: solid;
+    margin: 10px 10px 10px 10px;
 }
-hr {
-    border-top: 5px solid white;
-    width: 10%; text-align: left;
+h5 {
+    font-size: medium;
+    color: white;
+    border: solid gold;
+    padding: 5px 0px 5px;
 }
+
 
 
 
