--- a/CSS/style.css
+++ b/CSS/style.css
@@ -22,7 +22,9 @@ button {
     font-size: 30px;
     border-color: gold;
     width: 150px;
-    height: 50px;     
+    height: 50px;
+    
+    
 }
 button > img {
     position: relative;
@@ -117,8 +119,7 @@ fieldset{
 /* Slideshow container */
 .slideshow-container {
   max-width: 2000px;
-  position: static;
-  left: 100px;
+  position: relative;
   
 }
 
@@ -198,10 +199,16 @@ input {
     padding: 10px 10px 10px 10 px;
     border: teal solid;
 }
-
-
+/* Number text (1/3 etc) */
+.numbertext {
+  color: black;
+  font-size: 12px;
+  padding: 15px 12px;
+  position: absolute;
+  top: 100;
+}
 .role {
-    color: white;
+    color:  white;
     text-indent: 50px;
 }
 .col-sm{
@@ -269,3 +276,38 @@ h5 {
   from {opacity: .4}
   to {opacity: 1}
 }
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+  }
+  
+  /* Create four equal columns that sits next to each other */
+  .column {
+    flex: 25%;
+    max-width: 40%;
+    padding: 0 4px;
+  }
+  
+  .column img {
+    margin-top: 8px;
+    vertical-align: middle;
+    width: 100%;
+    border: solid white;
+  }
+  
+  /* Responsive layout - makes a two column-layout instead of four columns */
+  @media screen and (max-width: 800px) {
+    .column {
+      flex: 75%;
+      max-width: 75%;
+    }
+  }
+  
+  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+  @media screen and (max-width: 600px) {
+    .column {
+      flex: 100%;
+      max-width: 100%;
+    }
+  }
