--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,21 +10,18 @@ header {
 div {
     float: left;
 }
-
 button {
     float: left;
     margin-top: 10px;
     margin-left: 3px;
     margin-right: 5px;
-    margin-bottom: 8px;
+    margin-bottom: 5px;
+    border-radius: 10px;
     background-color: black;
     color: white;
     font-size: 30px;
     border-color: gold;
     width: 150px;
-    height: 50px;
-    
-    
 }
 button > img {
     position: relative;
@@ -38,6 +35,7 @@ button:hover {
     border-style: solid;
     border-color: purple;
     color:black;
+    position: relative;
 }
 figcaption {
     color: white;
@@ -46,7 +44,6 @@ figcaption {
     bottom: 350px;
     width: 100px;
 }
-
 h1 {
     color: white;
     font-size: 4em;
@@ -55,9 +52,7 @@ h1 {
     padding-bottom: 0px;
     margin-bottom: 0px;
     margin-top: 2px;
-    
 }
-
 h2 {
     color: white;
     text-align: center;
@@ -73,6 +68,10 @@ h3 {
 }
 p {
     color: white;
+}
+.skills {
+    color: white;
+    text-align: match parent;
 }
 .Head {
     position: relative;
@@ -91,38 +90,40 @@ p {
     
 }
 * {box-sizing:border-box}
-
 .bio {
-    position: static;
-    left:175px;
-    top:80px;
+    position:center;
+    text-align: center;
+    left:0px;
+    top:5px;
     text-indent: 50px;
-    width: 610px;
+    width: 900px;
     line-height: 2;
 }
-
+.soundcloud {
+    color: white;
+    background-color: rgb(255, 145, 0);
+    border-color: white;
+    font-size: 26px;
+}
 .soundcloud:hover {
     border-color: white;
     border-style: double;
 }
 .pride {
-    position: fixed;
-    left: 960px;
-    bottom: -4px;
+    position: absolute;
+    right: 20px;
+    bottom: -50px;
     width: 50px;
-    height: fit-content;
+    height: max-content;
 }
 fieldset{
     border: none;
 }
-
 /* Slideshow container */
 .slideshow-container {
   max-width: 2000px;
   position: relative;
-  
 }
-
 /* Hide the images by default */
 .mySlides {
   display: none;
@@ -130,7 +131,6 @@ fieldset{
   position: relative;
   left: 0px;
 }
-
 /* Next & previous buttons */
 .prev, .next {
   cursor: pointer;
@@ -146,8 +146,6 @@ fieldset{
   border-radius: 0 10px 10px 0;
   user-select: none;
 }
-
-
 .prev {
 position: relative;
   right: 600px;
@@ -161,13 +159,11 @@ position: relative;
     top:200px;
     color: black;
 }
-
 /* On hover, add a white background color with a little bit see-through */
 .prev:hover, .next:hover {
   background-color: black;
   color: white;
 }
-
 /* Caption text */
 .text {
   color: #f2f2f200;
@@ -178,7 +174,6 @@ position: relative;
   width: 100%;
   text-align: center;
 }
-
 .contact {
     color: white;
 }
@@ -198,6 +193,11 @@ input {
     width: 50%;
     padding: 10px 10px 10px 10 px;
     border: teal solid;
+    position: center;
+    vertical-align: ;
+}
+input >::-moz-placeholder {
+    text-align: start;
 }
 /* Number text (1/3 etc) */
 .numbertext {
@@ -242,23 +242,21 @@ article {
 h4 {
     font-size: x-large;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-decoration: underline;
+    text-align: justify;
     padding: 2px 2px 2px 2px;
-    border-color: teal;
-    border-width: 5px;
-    border-style: solid;
     margin: 10px 10px 10px 10px;
+    position: relative;
+    left: 350px;
 }
-h5 {
-    font-size: medium;
-    color: white;
-    border: solid gold;
-    padding: 5px 0px 5px;
+ul{
+    position: relative;
+    left: 375px;
 }
-
-
-
-
-
+.Tell {
+    width: 500px;
+    height: 100px;
+}
 /* Fading animation */
 .fade {
   -webkit-animation-name: fade;
