--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,8 @@
+html, body {
+    height: 100%;
+    width: 100%;
+    
+}
 body {
     background-color: rgba(0, 0, 0, 0.945);
 }
@@ -12,16 +17,18 @@ div {
 }
 button {
     float: left;
+    
     margin-top: 10px;
     margin-left: 3px;
-    margin-right: 5px;
+    margin-right: 25px;
     margin-bottom: 5px;
     border-radius: 10px;
     background-color: black;
     color: white;
     font-size: 30px;
     border-color: gold;
-    width: 150px;
+    width: 13.8%;
+    min-width: 13.8%;
 }
 button > img {
     position: relative;
@@ -36,13 +43,6 @@ button:hover {
     border-color: purple;
     color:black;
     position: relative;
-}
-figcaption {
-    color: white;
-    position: relative;
-    left: 850px;
-    bottom: 350px;
-    width: 100px;
 }
 h1 {
     color: white;
@@ -80,24 +80,24 @@ p {
 }
 .About {
     color: gold;
-    flex-wrap: wrap;
-    text-align: center;
+    flex-wrap: initial;
+    text-align: 50%;
     text-decoration: underline;
     font-size: 2em;
     margin-top: 0px;
     position: relative;
-    left: -10px;
+    left: -60px;
     top: 15px;
+    
     
 }
 * {box-sizing:border-box}
 .bio {
-    position:center;
-    text-align: center;
-    left:0px;
+    position: relative;
+    left: 200px;
     top:5px;
     text-indent: 50px;
-    width: 900px;
+    width: 60%;
     line-height: 2;
 }
 .soundcloud {
@@ -111,11 +111,12 @@ p {
     border-style: double;
 }
 .pride {
-    position: absolute;
-    right: 20px;
+    position: fixed;
+    right: 0px;
     bottom: -50px;
-    width: 50px;
-    height: max-content;
+    width: 3%;
+    height: 900px;
+    float: right;
 }
 fieldset{
     border: none;
@@ -123,47 +124,49 @@ fieldset{
 /* Slideshow container */
 .slideshow-container {
   max-width: 2000px;
-  position: relative;
+  position: center;
 }
 /* Hide the images by default */
 .mySlides {
   display: none;
   border: white solid;
   position: relative;
-  left: 0px;
+  left: 300px;
+  flex: auto;
 }
 /* Next & previous buttons */
 .prev, .next {
   cursor: pointer;
   position: relative ;
   top: 95%;
-  ;
   width: fit-content;
   margin-top: -22px;
   padding: 16px;
   font-weight: bold;
-  font-size: 40px;
+  font-size: 80px;
   transition: 0.6s ease;
   border-radius: 0 10px 10px 0;
   user-select: none;
+  flex: auto;
 }
 .prev {
 position: relative;
-  right: 600px;
+  right: 400px;
   top: 200px;
   border-radius: 3px 0 0 3px;
-  color: black;
+  color: white;
+  flex: auto;
 }
 .next {
     position: relative;
-    left: -115px;
-    top:200px;
-    color: black;
+    right: -250px;
+    top:180px;
+    color: white;
 }
 /* On hover, add a white background color with a little bit see-through */
 .prev:hover, .next:hover {
-  background-color: black;
-  color: white;
+  background-color: white;
+  color: black;
 }
 /* Caption text */
 .text {
@@ -191,11 +194,10 @@ position: relative;
     color: white;
 }
 input {
-    width: 50%;
+    width: 33%;
     padding: 10px 10px 10px 10 px;
     border: teal solid;
     position: center;
-    vertical-align: ;
 }
 input >::-moz-placeholder {
     text-align: start;
@@ -207,6 +209,10 @@ input >::-moz-placeholder {
   padding: 15px 12px;
   position: absolute;
   top: 100;
+}
+.container {
+    position: relative;
+    left: 150px;
 }
 .role {
     color:  white;
@@ -248,16 +254,17 @@ h4 {
     padding: 2px 2px 2px px;
     margin: 10px 10px 10px 10px;
     position: relative;
-    left: 350px;
+    left: 475px;
 }
 ul{
     position: relative;
-    left: 375px;
+    left: 500px;
 }
 .headshot {
+    float: left;
     position: relative;
-    left: 600px;
-    top: -400px;
+    left: 800px;
+    top: -425px;
     border: solid white;
     margin-bottom: 0px;
 }
